--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.224 2007/08/01 21:23:26 miod Exp $
+.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.225 2007/08/14 22:10:42 jmc Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -204,8 +204,6 @@ NE2000 and compatible 10/100 Ethernet device
 NVIDIA nForce MCP 10/100/Gigabit Ethernet device
 .It Xr nge 4
 National Semiconductor PCI 10/100/Gigabit Ethernet device
-.It Xr nx 4
-NetXen NX2031/NX2035 10Gb and 10/100/Gigabit Ethernet device
 .It Xr pcn 4
 AMD PCnet-PCI 10/100 Ethernet device
 .It Xr re 4
