--- a/usr.bin/sort/sort.1
+++ b/usr.bin/sort/sort.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/sort/sort.1,v 1.29 2007/05/31 19:20:16 jmc Exp $
+.\"	$OpenBSD: src/usr.bin/sort/sort.1,v 1.30 2007/08/21 20:29:25 millert Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -40,7 +40,7 @@
 .Nd sort or merge text files
 .Sh SYNOPSIS
 .Nm sort
-.Op Fl bcdfHimnruz
+.Op Fl bcdfHimnrsuz
 .Sm off
 .Op Fl k\ \& Ar field1 Op , Ar field2
 .Sm on
@@ -136,6 +136,8 @@ option no longer implies the
 option.)
 .It Fl r
 Reverse the sense of comparisons.
+.It Fl s
+Enable stable sort. Use additional resources (see sradixsort(3)).
 .El
 .Pp
 The treatment of field separators can be altered using these options:
