--- a/share/man/man4/siop.4
+++ b/share/man/man4/siop.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/siop.4,v 1.14 2007/05/31 19:19:52 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/siop.4,v 1.15 2007/08/24 13:52:24 kettenis Exp $
 .\"	$NetBSD: siop.4,v 1.3 2000/10/23 16:38:10 bouyer Exp $
 .\"
 .\" Copyright (c) 2000 Manuel Bouyer.
@@ -48,6 +48,9 @@ related
 controller chips:
 .Pp
 .Bl -dash -compact -offset indent
+.It
+53c720 and 53c770 (Fast-Wide
+.Tn SCSI )
 .It
 53c810, 53c810a and 53c815 (Fast
 .Tn SCSI )
