--- a/share/man/man4/wpi.4
+++ b/share/man/man4/wpi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/wpi.4,v 1.13 2007/07/10 18:31:01 damien Exp $
+.\" $OpenBSD: src/share/man/man4/wpi.4,v 1.14 2007/08/29 20:09:30 damien Exp $
 .\"
 .\" Copyright (c) 2006, 2007
 .\"	Damien Bergamini <damien.bergamini@free.fr>. All rights reserved.
@@ -240,7 +240,7 @@ This should not happen.
 The radio transmitter is off and thus no packet can go out.
 The driver will reset the hardware.
 Make sure the laptop radio switch is on.
-.It "wpi%d: could not read firmware file"
+.It "wpi%d: error %d, could not read firmware %s"
 For some reason, the driver was unable to read the firmware image from the
 filesystem.
 The file might be missing or corrupted.
