--- a/share/man/man4/uberry.4
+++ b/share/man/man4/uberry.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/uberry.4,v 1.3 2007/05/31 19:19:52 jmc Exp $
+.\" $OpenBSD: src/share/man/man4/uberry.4,v 1.4 2007/08/31 01:39:08 deraadt Exp $
 .\"
 .\" Copyright (c) 2006 Theo de Raadt <deraadt@openbsd.org>
 .\"
@@ -37,3 +37,8 @@ The
 driver
 first appeared in
 .Ox 4.1 .
+.Sh BUGS
+The
+.Nm
+driver is not able to charge a 7750 (USB Craddle model) which has a
+completely dead battery, and we do not know why.
