--- a/share/man/man4/fxp.4
+++ b/share/man/man4/fxp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/fxp.4,v 1.41 2007/05/31 19:19:50 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/fxp.4,v 1.42 2007/08/31 22:06:26 deraadt Exp $
 .\"
 .\" Copyright (c) 1997 David E. O'Brien
 .\"
@@ -121,7 +121,7 @@ There are not enough mbufs available for allocation.
 .It "fxp%d: device timeout"
 The device has stopped responding to the network, or there is a problem with
 the network connection (cable).
-.It "fxp%d: failed loadfirmware of file %s: errno %d"
+.It "fxp%d: error %d, could not read firmware %s"
 The device is able to do interrupt coalescing but required firmware file
 is missing.
 .El
