--- a/share/man/man4/rum.4
+++ b/share/man/man4/rum.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/rum.4,v 1.27 2007/05/31 19:19:51 jmc Exp $
+.\" $OpenBSD: src/share/man/man4/rum.4,v 1.28 2007/08/31 22:06:26 deraadt Exp $
 .\"
 .\" Copyright (c) 2005-2007
 .\"	Damien Bergamini <damien.bergamini@free.fr>
@@ -298,7 +298,7 @@ Join an existing BSS network,
 .Ed
 .Sh DIAGNOSTICS
 .Bl -diag
-.It "rum%d: failed loadfirmware of file %s"
+.It "rum%d: error %d, could not read firmware %s"
 For some reason, the driver was unable to read the microcode file from the
 filesystem.
 The file might be missing or corrupted.
