--- a/share/man/man4/vic.4
+++ b/share/man/man4/vic.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/vic.4,v 1.19 2007/05/31 19:19:53 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/vic.4,v 1.20 2007/09/02 08:27:03 dlg Exp $
 .\"
 .\" Copyright (c) 2006 Reyk Floeter <reyk@openbsd.org>
 .\"
@@ -56,6 +56,8 @@ VMware GSX Server 2.5 and newer
 VMware Server 1.0 and newer
 .It
 VMware Workstation 4.5 and newer
+.It
+VMware Fusion 1.0
 .El
 .Pp
 The
