--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/ifconfig/ifconfig.8,v 1.148 2007/07/31 06:41:04 pyr Exp $
+.\"	$OpenBSD: src/sbin/ifconfig/ifconfig.8,v 1.149 2007/09/03 01:24:22 krw Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -277,7 +277,7 @@ Refer to the man page for the specific driver for more information.
 Disable special processing at the link level with the specified interface.
 .It Cm lladdr Ar etheraddr
 Change the link layer address (MAC address) of the interface.
-This should be specificed as six colon-separated hex values.
+This should be specified as six colon-separated hex values.
 .It Cm media Ar type
 Set the media type of the interface to
 .Ar type .
