--- a/share/man/man4/lmn.4
+++ b/share/man/man4/lmn.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/lmn.4,v 1.1 2007/09/04 20:19:24 deraadt Exp $
+.\"	$OpenBSD: src/share/man/man4/lmn.4,v 1.2 2007/09/05 06:00:21 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Theo de Raadt <deraadt@openbsd.org>
 .\"
@@ -42,4 +42,3 @@ The
 .Nm
 driver was written by
 .An Theo de Raadt Aq deraadt@openbsd.org .
-
