--- a/share/man/man4/lmn.4
+++ b/share/man/man4/lmn.4
@@ -1,6 +1,6 @@
-.\"	$OpenBSD: src/share/man/man4/lmn.4,v 1.2 2007/09/05 06:00:21 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/lmn.4,v 1.3 2007/09/05 06:03:45 deraadt Exp $
 .\"
-.\" Copyright (c) 2005 Theo de Raadt <deraadt@openbsd.org>
+.\" Copyright (c) 2007 Theo de Raadt <deraadt@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: September 5 2007 $
 .Dt LMN 4
 .Os
 .Sh NAME
