--- a/share/man/man5/changelist.5
+++ b/share/man/man5/changelist.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man5/changelist.5,v 1.3 2007/05/31 19:19:58 jmc Exp $
+.\"	$OpenBSD: src/share/man/man5/changelist.5,v 1.4 2007/09/06 07:01:34 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason McIntyre <jmc@openbsd.org>
 .\"
@@ -73,7 +73,7 @@ format, via
 in the following format:
 .Bd -unfilled -offset indent
 =====
-/etc/shells diffs (-OLD  -NEW)
+/etc/shells diffs (-OLD  +NEW)
 =====
 .Ed
 .Pp
