--- a/lib/libc/stdio/fgets.3
+++ b/lib/libc/stdio/fgets.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/stdio/fgets.3,v 1.27 2007/08/08 07:20:45 ray Exp $
+.\"	$OpenBSD: src/lib/libc/stdio/fgets.3,v 1.28 2007/09/07 05:17:59 cloder Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -31,7 +31,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: August 8 2007 $
 .Dt FGETS 3
 .Os
 .Sh NAME
@@ -180,7 +180,7 @@ correctly assume the end of the string is represented by a NUL
 character.
 If the first character of a line returned by
 .Fn fgets
-were null,
+were NUL,
 .Fn strchr
 would immediately return without considering the rest of the returned text
 which may indeed include a newline.
