--- a/share/man/man4/iwn.4
+++ b/share/man/man4/iwn.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/iwn.4,v 1.3 2007/09/06 18:37:19 damien Exp $
+.\" $OpenBSD: src/share/man/man4/iwn.4,v 1.4 2007/09/07 14:00:46 jmc Exp $
 .\"
 .\" Copyright (c) 2007
 .\"	Damien Bergamini <damien.bergamini@free.fr>. All rights reserved.
@@ -185,8 +185,9 @@ majid.awad@intel.com.
 A prepackaged version of the firmware, designed to be used with
 .Xr pkg_add 1 ,
 can be found at:
-.Pp
-.Pa http://damien.bergamini.free.fr/packages/openbsd/iwn-firmware-4.44.1.18.tgz
+.Bd -literal
+http://damien.bergamini.free.fr/packages/openbsd/iwn-firmware-4.44.1.18.tgz
+.Ed
 .Sh EXAMPLES
 The following
 .Xr hostname.if 5
