--- a/usr.bin/man/man.1
+++ b/usr.bin/man/man.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/man/man.1,v 1.37 2007/08/06 19:16:06 sobrado Exp $
+.\"	$OpenBSD: src/usr.bin/man/man.1,v 1.38 2007/09/07 14:10:26 jmc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -204,6 +204,8 @@ General commands
 System calls and error numbers.
 .It 3
 Libraries.
+.It 3f
+Fortran programmer's reference guide.
 .It 3p
 .Xr perl 1
 programmer's reference guide.
