--- a/share/man/man4/nfe.4
+++ b/share/man/man4/nfe.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/nfe.4,v 1.13 2007/05/31 19:19:51 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/nfe.4,v 1.14 2007/09/07 18:59:18 jmc Exp $
 .\"
 .\" Copyright (c) 2006 Jonathan Gray <jsg@openbsd.org>
 .\"
@@ -33,7 +33,7 @@ The
 driver supports PCI Ethernet adapters based on the NVIDIA
 nForce Media and Communications Processors (MCP), such as
 the nForce, nForce 2, nForce 3, CK804, MCP04, MCP51, MCP55,
-MCP61, MCP65 and MCP67 Ethernet controller chips.
+MCP61, MCP65, MCP67 and MCP73 Ethernet controller chips.
 .Pp
 The
 .Nm
