--- a/share/man/man4/usb.4
+++ b/share/man/man4/usb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/usb.4,v 1.92 2007/09/08 02:15:52 jsg Exp $
+.\"	$OpenBSD: src/share/man/man4/usb.4,v 1.93 2007/09/08 06:04:08 jmc Exp $
 .\"	$NetBSD: usb.4,v 1.15 1999/07/29 14:20:32 augustss Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
@@ -35,7 +35,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: June 20 2007 $
+.Dd $Mdocdate: September 8 2007 $
 .Dt USB 4
 .Os
 .Sh NAME
@@ -166,10 +166,10 @@ MosChip Semiconductor MCS7703 based USB serial adapter
 Arkmicro Technologies ARK3116 based USB serial adapter
 .It Xr ubsa 4
 Belkin USB serial adapter
-.It Xr ucom 4
-USB tty support
 .It Xr uchcom 4
 WinChipHead CH341/340 based USB serial adapter
+.It Xr ucom 4
+USB tty support
 .It Xr ucycom 4
 Cypress microcontroller based USB serial adapter
 .It Xr uftdi 4
