--- a/share/man/man4/thmc.4
+++ b/share/man/man4/thmc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/thmc.4,v 1.1 2007/09/09 00:20:31 deraadt Exp $
+.\"	$OpenBSD: src/share/man/man4/thmc.4,v 1.2 2007/09/09 00:47:46 deraadt Exp $
 .\"
 .\" Copyright (c) 2005 Theo de Raadt <deraadt@openbsd.org>
 .\"
@@ -14,11 +14,11 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
-.Dt ADMLC 4
+.Dd $Mdocdate: September 9 2007 $
+.Dt TMHC 4
 .Os
 .Sh NAME
-.Nm admlc
+.Nm tmhc
 .Nd TI TMHC50, Analog ADM1022/1028 temperature sensor
 .Sh SYNOPSIS
 .Cd "tmhc* at iic?"
