--- a/share/man/man4/iic.4
+++ b/share/man/man4/iic.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/iic.4,v 1.61 2007/09/09 00:47:46 deraadt Exp $
+.\"	$OpenBSD: src/share/man/man4/iic.4,v 1.62 2007/09/09 15:59:47 deraadt Exp $
 .\"
 .\" Copyright (c) 2004, 2006 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 7 2007 $
+.Dd $Mdocdate: September 9 2007 $
 .Dt IIC 4
 .Os
 .Sh NAME
@@ -150,8 +150,8 @@ Philips PCA9532 LED dimmer
 Philips PCF8591 temperature sensor
 .It Xr ricohrtc 4
 Ricoh RS5C372 Real Time Clock
-.It Xr tmhc 4
-TI TMHC50, Analog ADM1022/1028 temperature sensor
+.It Xr thmc 4
+TI THMC50, Analog ADM1022/1028 temperature sensor
 .It Xr tsl 4
 TAOS TSL2560/61 light sensor
 .It Xr wbenv 4
