--- a/usr.bin/rcs/rlog.1
+++ b/usr.bin/rcs/rlog.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/rcs/rlog.1,v 1.22 2007/09/09 17:01:38 ray Exp $
+.\"	$OpenBSD: src/usr.bin/rcs/rlog.1,v 1.23 2007/09/09 17:18:53 ray Exp $
 .\"
 .\" Copyright (c) 2005 Xavier Santolaria <xsa@openbsd.org>
 .\" All rights reserved.
@@ -14,7 +14,7 @@
 .\" WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-.Dd $Mdocdate$
+.Dd $Mdocdate: September 9 2007 $
 .Dt RLOG 1
 .Os
 .Sh NAME
@@ -190,7 +190,7 @@ Print the names of RCS files with locks set:
 .Xr rcsdiff 1 ,
 .Xr rcsmerge 1
 .Sh STANDARDS
-The flag
-.Op Fl T
-has no effect and is provided
+The flags
+.Op Fl qT
+have no effect and are provided
 for compatibility only.
