--- a/usr.bin/pcc/arch/mips/TODO
+++ b/usr.bin/pcc/arch/mips/TODO
@@ -1,3 +1,5 @@
+$OpenBSD: src/usr.bin/pcc/arch/mips/Attic/TODO,v 1.2 2007/09/15 22:04:38 ray Exp $
+
 * Look at long long support for the new register allocator.
 
 * Add floating point support.
