--- a/usr.bin/pcc/arch/nova/README
+++ b/usr.bin/pcc/arch/nova/README
@@ -1,3 +1,5 @@
+$OpenBSD: src/usr.bin/pcc/arch/nova/Attic/README,v 1.2 2007/09/15 22:04:38 ray Exp $
+
 Calling conventions, stack frame and zero page:
 
 The variables that normally are placed on the stack or in registers in C
