--- a/share/man/man4/bwi.4
+++ b/share/man/man4/bwi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.2 2007/09/15 06:56:01 mglocker Exp $
+.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.3 2007/09/15 23:36:30 mglocker Exp $
 .\"
 .\" Copyright (c) 2007 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: September 15 2007 $
 .Os
 .Dt BWI 4
 .Sh NAME
@@ -222,7 +222,7 @@ A prepackaged version of the firmware, designed to be used with
 .Xr pkg_add 1 ,
 can be found at:
 .Bd -literal -offset indent
-http://www.nazgul.ch/bwi/bwi-firmware-1.0.tgz
+http://www.nazgul.ch/bwi/bwi-firmware-1.1.tgz
 .Ed
 .Sh HARDWARE
 The following cards are among those supported by the
