--- a/usr.bin/top/top.1
+++ b/usr.bin/top/top.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/top/top.1,v 1.47 2007/05/31 19:20:18 jmc Exp $
+.\"	$OpenBSD: src/usr.bin/top/top.1,v 1.48 2007/09/17 16:59:07 jmc Exp $
 .\"
 .\" Copyright (c) 1997, Jason Downs.  All rights reserved.
 .\"
@@ -271,7 +271,10 @@ Reset any filters put in place by the
 and
 .Sq u
 interactive commands,
-or their command line equivalents.
+or their command line equivalents,
+or any process highlighting put in place by the
+.Sq P
+interactive command.
 .It C
 Toggle the display of process command line arguments.
 .It d Ar count
@@ -318,6 +321,8 @@ flag, as detailed above.
 .It P Ar pid
 Highlight a specific process, selected by
 .Ar pid .
+.Sq P+
+removes process highlighting.
 .It p Ar pid
 Show only the process
 .Ar pid .
