--- a/usr.bin/cvs/cvs.5
+++ b/usr.bin/cvs/cvs.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/cvs/cvs.5,v 1.3 2007/09/19 12:48:41 tobias Exp $
+.\"	$OpenBSD: src/usr.bin/cvs/cvs.5,v 1.4 2007/09/19 13:49:55 tobias Exp $
 .\"
 .\" Copyright (c) 2004 Jean-Francois Brousseau <jfb@openbsd.org>
 .\" Copyright (c) 2004-2007 Xavier Santolaria <xsa@openbsd.org>
@@ -24,7 +24,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: September 19 2007 $
 .Dt CVS 5
 .Os
 .Sh NAME
@@ -391,7 +391,7 @@ the
 .Fl V
 flag.
 .Pp
-Empty lines and lines specifying no optional arguments are ignored.
+Empty lines are ignored.
 A line beginning with a hash character
 .Pq Sq #
 is considered a comment and ignored.
