--- a/lib/libc/string/strstr.3
+++ b/lib/libc/string/strstr.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: src/lib/libc/string/strstr.3,v 1.9 2007/05/31 19:19:32 jmc Exp $
+.\"	$OpenBSD: src/lib/libc/string/strstr.3,v 1.10 2007/09/19 16:06:45 jmc Exp $
 .\"
 .Dd $Mdocdate$
 .Dt STRSTR 3
@@ -85,3 +85,8 @@ The
 .Fn strstr
 function conforms to
 .St -ansiC .
+.Sh HISTORY
+The
+.Fn strcasestr
+function first appeared in
+.Ox 3.8 .
