--- a/share/man/man4/bwi.4
+++ b/share/man/man4/bwi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.8 2007/09/23 22:32:07 ian Exp $
+.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.9 2007/09/24 06:12:59 mglocker Exp $
 .\"
 .\" Copyright (c) 2007 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -235,8 +235,8 @@ ASUS WL-138g	BCM4318	PCI	b/g
 Buffalo WLI-CB-G54	BCM4306	CardBus	b/g
 Linksys WPC54G Ver 3	BCM4318	CardBus	b/g
 Linksys WPC54GS Ver 2	BCM4318	CardBus	b/g
+US Robotics 5411	BCM4318	CardBus	b/g
 Compaq R4035 onboard	BCM4306	PCI	b/g
-?	BCM4306	PCI	b/g
 .El
 .Sh EXAMPLES
 The following
