--- a/share/man/man4/bwi.4
+++ b/share/man/man4/bwi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.9 2007/09/24 06:12:59 mglocker Exp $
+.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.10 2007/09/24 07:47:39 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 23 2007 $
+.Dd $Mdocdate: September 24 2007 $
 .Os
 .Dt BWI 4
 .Sh NAME
@@ -233,10 +233,10 @@ driver:
 .Em "Card	Chip	Bus	Standard"
 ASUS WL-138g	BCM4318	PCI	b/g
 Buffalo WLI-CB-G54	BCM4306	CardBus	b/g
+Compaq R4035 onboard	BCM4306	PCI	b/g
 Linksys WPC54G Ver 3	BCM4318	CardBus	b/g
 Linksys WPC54GS Ver 2	BCM4318	CardBus	b/g
 US Robotics 5411	BCM4318	CardBus	b/g
-Compaq R4035 onboard	BCM4306	PCI	b/g
 .El
 .Sh EXAMPLES
 The following
