--- a/lib/libc/gen/sysctl.3
+++ b/lib/libc/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.174 2007/09/24 22:03:02 henning Exp $
+.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.175 2007/09/25 16:12:27 jmc Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -1066,9 +1066,9 @@ The fifth and sixth level names are as follows:
 .It Dv NET_RT_STATS No "	None"
 .El
 .Pp
-A facultative seventh level name can be provided to select the routing table
-on which you want to run the operation.
-If not provided, the main table with id 0 is used.
+An optional seventh level name can be provided to select the routing table
+on which to run the operation.
+If not provided, the table with ID 0 is used.
 .It Dv PF_INET
 Get or set various global information about IPv4
 .Pq Internet Protocol version 4 .
