--- a/share/man/man4/bwi.4
+++ b/share/man/man4/bwi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.15 2007/10/02 19:42:18 jmc Exp $
+.\" $OpenBSD: src/share/man/man4/bwi.4,v 1.16 2007/10/04 05:44:42 mglocker Exp $
 .\"
 .\" Copyright (c) 2007 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -222,7 +222,7 @@ A prepackaged version of the firmware, designed to be used with
 .Xr pkg_add 1 ,
 can be found at:
 .Bd -literal -offset indent
-http://www.nazgul.ch/bwi/bwi-firmware-1.2.tgz
+http://www.nazgul.ch/bwi/bwi-firmware-1.3.tgz
 .Ed
 .Sh HARDWARE
 The following cards are among those supported by the
