--- a/share/man/man4/man4.amd64/amdpcib.4
+++ b/share/man/man4/man4.amd64/amdpcib.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: src/share/man/man4/man4.amd64/amdpcib.4,v 1.1 2007/10/07 21:10:26 deraadt Exp $
+.\"     $OpenBSD: src/share/man/man4/man4.amd64/amdpcib.4,v 1.2 2007/10/08 12:48:21 jmc Exp $
 .\"
 .\" Marc Balmer, 2007. Public Domain.
 .\"
@@ -20,7 +20,6 @@ driver provides support for the AMD-8111 LPC bridge and implements a
 .Xr intro 4 ,
 .Xr isa 4 ,
 .Xr pci 4 ,
-.Xr pcib 4 ,
 .Xr watchdog 4
 .Sh HISTORY
 The
