--- a/share/man/man4/man4.i386/ichpcib.4
+++ b/share/man/man4/man4.i386/ichpcib.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.i386/ichpcib.4,v 1.9 2007/06/02 18:39:57 jsg Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.i386/ichpcib.4,v 1.10 2007/10/08 12:48:21 jmc Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -49,9 +49,7 @@ These devices are mostly usual
 .Tn PCI-ISA
 bridges but with some additional power management and monitoring
 capabilities.
-Besides the core
-.Xr pcib 4
-functionality, the
+Besides the core functionality, the
 .Nm
 driver provides support for the Intel SpeedStep technology, available
 for the
@@ -68,7 +66,6 @@ program.
 .Xr intro 4 ,
 .Xr isa 4 ,
 .Xr pci 4 ,
-.Xr pcib 4 ,
 .Xr sysctl 8
 .Sh HISTORY
 Intel SpeedStep support for the ICHx-M chipsets first appeared in
