--- a/usr.sbin/ospf6d/ospf6d.8
+++ b/usr.sbin/ospf6d/ospf6d.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/ospf6d/ospf6d.8,v 1.1 2007/10/08 10:44:50 norby Exp $
+.\"	$OpenBSD: src/usr.sbin/ospf6d/ospf6d.8,v 1.2 2007/10/08 13:22:38 jmc Exp $
 .\"
 .\" Copyright (c) 2004, 2005, 2007 Esben Norby <norby@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: October 8 2007 $
 .Dt OSPF6D 8
 .Os
 .Sh NAME
@@ -32,7 +32,7 @@ daemon which manages routing tables.
 .Pp
 This implementation supports OSPF version 3, thus it is only capable of
 maintaining IPv6 routing tables.
- .Pp
+.Pp
 OSPF is an interior gateway protocol designed to superceed RIP.
 The OSPF daemon maintains a Link State Database
 .Pq LSDB
