--- a/share/man/man9/mi_switch.9
+++ b/share/man/man9/mi_switch.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man9/Attic/ctxsw.9,v 1.13 2007/10/10 16:21:29 art Exp $
+.\"	$OpenBSD: src/share/man/man9/mi_switch.9,v 1.3 2007/10/10 16:26:23 deraadt Exp $
 .\"	$NetBSD: ctxsw.9,v 1.9 1999/03/06 22:09:29 mycroft Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -35,8 +35,8 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 14 2007 $
-.Dt CTXSW 9
+.Dd $Mdocdate: October 10 2007 $
+.Dt MI_SWITCH 9
 .Os
 .Sh NAME
 .Nm mi_switch ,
