--- a/usr.sbin/ospf6d/ospf6d.8
+++ b/usr.sbin/ospf6d/ospf6d.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/ospf6d/ospf6d.8,v 1.2 2007/10/08 13:22:38 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/ospf6d/ospf6d.8,v 1.3 2007/10/13 17:12:00 jmc Exp $
 .\"
 .\" Copyright (c) 2004, 2005, 2007 Esben Norby <norby@openbsd.org>
 .\"
@@ -33,7 +33,7 @@ daemon which manages routing tables.
 This implementation supports OSPF version 3, thus it is only capable of
 maintaining IPv6 routing tables.
 .Pp
-OSPF is an interior gateway protocol designed to superceed RIP.
+OSPF is an interior gateway protocol designed to supersede RIP.
 The OSPF daemon maintains a Link State Database
 .Pq LSDB
 consisting of routers and networks.
