--- a/share/man/man4/wbng.4
+++ b/share/man/man4/wbng.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/wbng.4,v 1.1 2007/10/14 15:37:44 cnst Exp $
+.\"	$OpenBSD: src/share/man/man4/wbng.4,v 1.2 2007/10/14 18:36:06 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Constantine A. Murenin <cnst+openbsd@bugmail.mojo.ru>
 .\"
@@ -14,12 +14,12 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: October 14 2007 $
 .Dt WBNG 4
 .Os
 .Sh NAME
 .Nm wbng
-.Nd Winbond W83793G voltage, temperature and fan sensor
+.Nd Winbond W83793G temperature, voltage, and fan sensor
 .Sh SYNOPSIS
 .Cd "wbng* at iic?"
 .Sh DESCRIPTION
