--- a/share/man/man4/man4.sgi/mkbc.4
+++ b/share/man/man4/man4.sgi/mkbc.4
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: src/share/man/man4/man4.sgi/mkbc.4,v 1.2 2007/10/18 21:13:31 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Joel Sing
 .\"
@@ -13,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: October 18 2007 $
 .Dt MKBC 4 sgi
 .Os
 .Sh NAME
@@ -32,7 +33,7 @@ machines.
 .Sh SEE ALSO
 .Xr macebus 4 ,
 .Xr pckbd 4 ,
-.Xr pms 4 ,
+.Xr pms 4
 .Sh HISTORY
 The
 .Nm
@@ -41,4 +42,5 @@ driver first appeared in
 .Sh AUTHORS
 The
 .Nm
-driver was written by Joel Sing
+driver was written by
+.An Joel Sing .
