--- a/share/man/man4/pms.4
+++ b/share/man/man4/pms.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/pms.4,v 1.10 2007/05/31 19:19:51 jmc Exp $
+.\" $OpenBSD: src/share/man/man4/pms.4,v 1.11 2007/10/19 06:29:36 jmc Exp $
 .\" $NetBSD: pms.4,v 1.4 2000/07/05 15:45:34 msaitoh Exp $
 .\"
 .\" Copyright (c) 1993 Christopher G. Demetriou
@@ -43,6 +43,7 @@
 .Sh SYNOPSIS
 .Cd "pms* at pckbc?"
 .Cd "pms* at gsckbc?" Pq "hppa"
+.Cd "pms* at mkbc?" Pq "sgi"
 .Cd "pmsi* at pckbc?"
 .Cd "wsmouse* at pms? mux 0"
 .Cd "wsmouse* at pmsi? mux 0"
@@ -72,6 +73,7 @@ devices.
 .Xr gsckbc 4 ,
 .Xr intro 4 ,
 .Xr lms 4 ,
+.Xr mkbc 4 ,
 .Xr mms 4 ,
 .Xr pckbc 4 ,
 .Xr ums 4 ,
