--- a/usr.sbin/pcidump/pcidump.8
+++ b/usr.sbin/pcidump/pcidump.8
@@ -12,7 +12,7 @@
 .\" TORTIOUS ACTION, ARISING OUT OF
 .\" PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: October 22 2007 $
 .Dt PCIDUMP 8
 .Os
 .Sh NAME
@@ -38,7 +38,7 @@ Specify another file to use for PCI lookups.
 .It Ar dev:bus:func
 Causes
 .Nm
-to only display infromation for the device specified.
+to only display information for the device specified.
 .Sh FILES
 .Bl -tag -width /dev/pci -compact
 .It Pa /dev/pci
