--- a/usr.sbin/relayd/relayd.conf.5
+++ b/usr.sbin/relayd/relayd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/relayd/relayd.conf.5,v 1.53 2007/10/22 12:18:15 reyk Exp $
+.\"	$OpenBSD: src/usr.sbin/relayd/relayd.conf.5,v 1.54 2007/10/22 15:45:40 jmc Exp $
 .\"
 .\" Copyright (c) 2006, 2007 Reyk Floeter <reyk@openbsd.org>
 .\" Copyright (c) 2006, 2007 Pierre-Yves Ritschard <pyr@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 28 2007 $
+.Dd $Mdocdate: October 22 2007 $
 .Dt HOSTSTATED.CONF 5
 .Os
 .Sh NAME
@@ -73,6 +73,7 @@ Additional configuration files can be included with the
 keyword, for example:
 .Bd -literal -offset indent
 include "/etc/hoststated.conf.local"
+.Ed
 .Sh MACROS
 Macros can be defined that will later be expanded in context.
 Macro names must start with a letter, and may contain letters, digits,
