--- a/share/man/man8/security.8
+++ b/share/man/man8/security.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man8/security.8,v 1.12 2007/05/31 19:19:59 jmc Exp $
+.\" $OpenBSD: src/share/man/man8/security.8,v 1.13 2007/10/23 14:02:38 jmc Exp $
 .\"
 .\" David Leonard, 2001. Public Domain.
 .\"
@@ -107,6 +107,9 @@ See
 for further details.
 .It
 Check for changes to the disklabels of mounted disks.
+.It
+Report on the installation or removal of any system
+.Xr package 5 .
 .El
 .Pp
 The intent of the
