--- a/share/man/man4/ex.4
+++ b/share/man/man4/ex.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.i386/Attic/ex.4,v 1.1 2007/10/23 07:25:45 brad Exp $
+.\"	$OpenBSD: src/share/man/man4/ex.4,v 1.1 2007/10/23 23:43:24 deraadt Exp $
 .\"
 .\" Copyright (c) 1997 David E. O'Brien
 .\"
@@ -23,8 +23,8 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd $Mdocdate$
-.Dt EX 4 i386
+.Dd $Mdocdate: October 23 2007 $
+.Dt EX 4
 .Os
 .Sh NAME
 .Nm ex
