--- a/usr.sbin/ifstated/ifstated.conf.5
+++ b/usr.sbin/ifstated/ifstated.conf.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/usr.sbin/ifstated/ifstated.conf.5,v 1.7 2007/10/25 06:06:26 pyr Exp $
+.\" $OpenBSD: src/usr.sbin/ifstated/ifstated.conf.5,v 1.8 2007/10/25 12:51:54 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Nikolay Sturm <sturm@openbsd.org>
 .\" Copyright (c) 2005 Marco Pfatschbacher <mpf@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: October 25 2007 $
 .Dt IFSTATED.CONF 5
 .Os
 .Sh NAME
@@ -50,7 +50,6 @@ Definitions of states and transitions.
 Set the initial state to
 .Ar state
 instead of using the first state defined.
-.It Xo
 .El
 .Sh MACROS
 Macros can be defined that will later be expanded in context.
