--- a/share/man/man4/spdmem.4
+++ b/share/man/man4/spdmem.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/spdmem.4,v 1.2 2007/10/27 04:16:18 jsg Exp $
+.\"	$OpenBSD: src/share/man/man4/spdmem.4,v 1.3 2007/10/27 04:21:28 jsg Exp $
 .\"
 .\" Copyright (c) 2007 Jonathan Gray <jsg@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 7 2007 $
+.Dd $Mdocdate: October 27 2007 $
 .Dt SPDMEM 4
 .Os
 .Sh NAME
@@ -29,7 +29,10 @@
 The
 .Nm
 driver retrieves information about memory modules from an
-onboard EEPROM, standardised as JEDEC 21-C.
+onboard EEPROM, standardised as JEDEC 21-C.  Currently
+.Nm
+is able to decode information relating to SDRAM, DDR SDRAM,
+and DDR2 SDRAM.
 .Sh SEE ALSO
 .Xr iic 4
 .Sh HISTORY
